Update AdSense publisher ID in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>GameZone Elite - Gaming Community & Contests</title>
     
     <!-- AdSense Auto Ads Script - REPLACE WITH YOUR PUBLISHER ID -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_PUBLISHER_ID"
-        crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6082300216742478"
+     crossorigin="anonymous"></script>
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -74,7 +74,7 @@
         <div class="ad-container ad-horizontal">
             <ins class="adsbygoogle"
                 style="display:block"
-                data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+                data-ad-client="ca-pub-6082300216742478"
                 data-ad-slot="1234567890"
                 data-ad-format="auto"
                 data-full-width-responsive="true"></ins>
@@ -116,7 +116,7 @@
     <div class="ad-container ad-grid">
         <ins class="adsbygoogle"
             style="display:block"
-            data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+            data-ad-client="ca-pub-6082300216742478"
             data-ad-slot="0987654321"
             data-ad-format="rectangle"
             data-full-width-responsive="true"></ins>
@@ -163,7 +163,7 @@
     <div class="ad-container ad-native">
         <ins class="adsbygoogle"
             style="display:block"
-            data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+            data-ad-client="ca-pub-6082300216742478"
             data-ad-slot="1122334455"
             data-ad-format="autorelaxed"></ins>
         <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
@@ -257,7 +257,7 @@
     <div class="ad-container ad-vertical">
         <ins class="adsbygoogle"
             style="display:block"
-            data-ad-client="ca-pub-YOUR_PUBLISHER_ID"
+            data-ad-client="ca-pub-6082300216742478"
             data-ad-slot="5566778899"
             data-ad-format="vertical"
             data-full-width-responsive="true"></ins>
